name:                ghc-containers-conflict
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sgraf812/ghc-containers-conflict#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           Copyright: (c) 2016 Sebastian Graf
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       
      base >= 4.7 && < 5
    , doctest == 0.11.4
    , containers == 0.5.10.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgraf812/ghc-containers-conflict
